# mars-water-magma

./: README.md  pyproject.toml  requirements.txt
notebooks/: benchmark_1D.ipynb
src/mars_water_magma/: __init__.py
src/mars_water_magma/core/: __init__.py
src/mars_water_magma/core/_base/: __init__.py  models.py
src/mars_water_magma/core/one_dimension/: __init__.py  models.py  solutions.py
