[tool.poetry]
name = "mars-water-magma"
version = "0.1.0"
description = ""
authors = ["Gaétan Rigaut <gaetanrigaut.s@gmail.com>"]
readme = "README.md"

packages = [{ include = "mars_water_magma", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11, <3.13"
scipy = "^1.11.3"
matplotlib = "=3.8.2"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "*"}
ruff = "*"
mypy = "*"
pre-commit = "*"
pre-commit-hooks = "*"
pytest = "*"
coverage = { extras = ["toml"], version = "*" }
pytest-cov = "*"
pytest-mock = "*"
ipykernel = "*"
nbstripout = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py311']
line-length = 79

[tool.ruff]
exclude = ["*.ipynb"]
line-length = 79
target-version = "py311"
select = ["ALL"]
ignore = [
    # missing-trailing-comma (COM812)
    "COM812",
    #no-blank-line-before-class
    "D211",
    #multi-line-summary-second-line
    "D213",
    # flake8-boolean-trap
    "FBT",
    # bandit
    "S",
    # flake8-logging
    "G",
    # flake8-print
    "T",
    # McCabe complexity
    "C901",
    # do not assign a lambda expression, use a def
    "E731",
    # implicit-namespace-package
    "INP001",
    # single-line-implicit-string-concatenation
    "ISC001",
    # Too many arguments to function call
    "PLR0913",
    # Missing type annotation for `self` in method
    "ANN101",
    # suppressible-exception
    "SIM105",
]
unfixable = [
    # Remove unused-imports
    "F401",
    # Variable assigned but never used
    "F841",
    # Use {key} in {dict} instead of {key} in {dict}.keys()
    "SIM118",
    # move to type-checking block
    "TCH003",
    # found comented-out code
    "ERA001",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--cov"]
testpaths = ["tests"]

[tool.coverage.paths]
source = ["mars_water_magma", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["mars_water_magma"]

[tool.coverage.report]
show_missing = true
